add a form in the index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>PINGPONG</title>
+    <link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
   </head>
   <body>
+    <div class="container"><!--start of container-->
+      <div class="row"><!--start of row-->
+        <div class="col-xs-12 col-md-12"><!--start of col-->
+          <form class="number"action="index.html" method="post">
+
+          </form>
+
+
+        </div><!--closes a col-->
+      </div><!--close of container-->
+    </div><!--close of container-->
     <h1>PINGPONG</h1>
     <label for="user_input"></label>
 
