add a form in the index.html

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
       <div class="row"><!--start of row-->
         <div class="col-xs-12 col-md-12"><!--start of col-->
           <form class="number"action="index.html" method="post">
-
+            <div class="form-group">
+              <label for="user_input">Number</label>
+              <input type="number" class="form-control" placeholder="Enter a number" id="Number-input">
+            </div>
           </form>
-
-
         </div><!--closes a col-->
       </div><!--close of container-->
     </div><!--close of container-->
     <h1>PINGPONG</h1>
-    <label for="user_input"></label>
+
 
   </body>
 </html>
