adds comments in the index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
   </head>
-  <body>
+  <body><!--starts a body-->
+    <h1>PINGPONG</h1>
     <div class="container"><!--start of container-->
       <div class="row"><!--start of row-->
         <div class="col-xs-12 col-md-12"><!--start of col-->
@@ -19,8 +20,5 @@
         </div><!--closes a col-->
       </div><!--close of container-->
     </div><!--close of container-->
-    <h1>PINGPONG</h1>
-
-
-  </body>
+  </body><!--closes a body-->
 </html>
