add a button in  thr form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <label for="user_input">Number</label>
               <input type="number" class="form-control" placeholder="Enter a number" id="Number-input">
             </div>
-            <button type="button" name="button"></button>
+            <button type="submit" class="btn btn-primary">Send Reply</button>
           </form>
         </div><!--closes a col-->
       </div><!--close of container-->
