--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
         </div><!--closes a col-->
       </div><!--close of container-->
     </div><!--close of container-->
+    <script   src="js/jquery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
   </body><!--closes a body-->
 </html>
