--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
               <label for="user_input">Number</label>
               <input type="number" class="form-control" placeholder="Enter a number" id="NumberInput">
             </div>
-            <button type="submit" id="numResult" class="btn btn-primary">Send Reply</button>
+            <button type="submit" class="btn btn-primary">Send Reply</button>
           </form>
+          <ul id="numResult"></ul>
         </div><!--closes a col-->
       </div><!--close of container-->
     </div><!--close of container-->
