--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>PINGPONG</title>
+    <title>pingPong</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
-  <body><!--starts a body-->
+  <body class="ping"><!--starts a body-->
     <div class="container-fluid">
       <div class="jumbotron">
         <div class="row">
           <div class="col-xs-12 col-md-12">
-            <h1>PING PONG</h1>
+            <h1>PingPong</h1>
           </div>
         </div>
       </div>
@@ -21,7 +21,6 @@
         <div class="row">
           <div class="col-md-2">
             <div class="About">
-           <img src="images/logo.png" class="img-responsive" alt="">
            <h3>ABOUT PING PONG</h3>
            <h5>Created By:</h5>
            <h6>ORONE FAITH EUNICE</h6>
@@ -32,9 +31,17 @@
             </div>
           </div>
         <div class="col-md-10" id="form"><!--start of col-->
+          <h2>let's play!</h2>
+          <h3>Rules:</h3>
+          <h3>pingPong will count up to your number from 1 to the following expection</h3>
+          <ol>
+            <li><strong>Numbers divisible by 3 are replaced with "ping"</strong></li>
+            <li><strong>Numbers divisible by 5 are replaced with "pong"</strong></li>
+            <li><strong>Numbers divisible by 15 are replaced with "pingpong"</strong></li>
+          </ol>
           <form class="number" id="num-form" action="index.html" method="post">
             <div class="form-group">
-              <label for="user_input">Number</label>
+              <label for="user_input">Enter your Number</label>
               <input type="number" class="form-control" placeholder="Enter a number" id="NumberInput">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
